<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4"
        android:background="@drawable/cardview_background">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:layout_marginTop="30dp"
            android:weightSum="5"
            android:layout_marginHorizontal="20sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/def_dot"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/defult_dot"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/pick_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_up"
                android:layout_toRightOf="@+id/def_dot"
                android:textSize="15sp"
                android:textColor="@color/lightgray"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/house_14_street_6_garden_town_lhr"
                android:layout_toEndOf="@+id/def_dot"
                android:layout_below="@+id/pick_up"
                android:textColor="@color/lightgray"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:weightSum="5"
            android:layout_marginHorizontal="20sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/def_dot_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/defult_dot"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/drop_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drop_off"
                android:layout_toRightOf="@+id/def_dot_2"
                android:textSize="15sp"
                android:textColor="@color/lightgray"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/techloop_software_house"
                android:layout_toRightOf="@+id/def_dot_2"
                android:layout_below="@+id/drop_off"
                android:textColor="@color/lightgray"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_card_view"
                android:backgroundTint="@color/red"
                android:text="Cancel Ride"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_card_view"
                android:text="Start Ride"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>


        </LinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_card_view"
        android:layout_marginHorizontal="80dp"
        android:text="@string/open_nevigation"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</FrameLayout>