<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/bg_signup">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.25"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.3"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ride Details"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.25"
        android:weightSum="8"
        android:paddingLeft="10dp"
        android:background="@drawable/cardview_background"
        android:orientation="vertical"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Ride Type*"
                android:layout_weight="2"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@color/lightgray"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:background="@drawable/background_ed_txt"
                android:src="@drawable/ic_baseline_add_24"
                android:padding="8dp"/>

        </LinearLayout>




        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:weightSum="6"
                android:layout_weight="0.7">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:buttonTint="@color/lightgray"
                        android:shadowColor="@color/lightgray"
                        android:gravity="center_vertical"
                        tools:targetApi="lollipop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/economy"
                        android:gravity="center"
                        android:layout_marginHorizontal="2dp"
                        android:textSize="17sp"
                        android:textColor="@color/lightgray"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:buttonTint="@color/lightgray"
                        android:shadowColor="@color/lightgray"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/premium"
                        android:gravity="center"
                        android:textSize="17sp"
                        android:layout_marginHorizontal="2dp"
                        android:textColor="@color/lightgray"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:buttonTint="@color/lightgray"
                        android:shadowColor="@color/lightgray"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/bike"
                        android:gravity="center"
                        android:textSize="17sp"
                        android:layout_marginHorizontal="2dp"
                        android:textColor="@color/lightgray"/>

                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.1"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:buttonTint="@color/lightgray"
                    android:shadowColor="@color/lightgray"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/van"
                    android:gravity="center"
                    android:layout_marginHorizontal="2dp"
                    android:textSize="17sp"
                    android:textColor="@color/lightgray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.1"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:buttonTint="@color/lightgray"
                    android:shadowColor="@color/lightgray"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:gravity="center"
                    android:text="@string/drone"
                    android:textColor="@color/lightgray"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:buttonTint="@color/lightgray"
                    android:shadowColor="@color/lightgray"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/truck"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:textColor="@color/lightgray"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_weight="1">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Upload ID Card"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:textColor="@color/lightgray"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_ed_txt"
                    android:src="@drawable/ic_baseline_add_24"
                    android:padding="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Upload ID Card"
                android:layout_weight="2"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@color/lightgray"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:background="@drawable/background_ed_txt"
                android:src="@drawable/ic_baseline_add_24"
                android:padding="8dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Upload ID Card"
                android:layout_weight="2"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@color/lightgray"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:background="@drawable/background_ed_txt"
                android:src="@drawable/ic_baseline_add_24"
                android:padding="8dp"/>

        </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload ID Card"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@color/lightgray"
                android:textStyle="bold"/>

        <EditText
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:inputType="number"
            android:lines="1"
            android:layout_marginBottom="5dp"
            android:hint="YYYY"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"/>



        <LinearLayout

            android:id="@+id/save_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/background_card_view"
            android:layout_weight="1.3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Save Settings"
                android:textStyle="bold"
                android:textSize="23sp"/>

        </LinearLayout>


    </LinearLayout>

    </LinearLayout>
